# faq-chatbot-service

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/api/: api.py
app/api/endpoints/: conversation.py  health.py
app/chat/: engine.py  messaging.py  qa_response_synth.py  system_message.py
app/core/: config.py
app/data/: __init__.py  etl.py
example/: main.py
