[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["ITHwang <hwangintech@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies] # main dependency group
python = "^3.11"
ruff = "^0.3.5"
fastapi = {extras = ["all"], version = "^0.110.1"}
pydantic-settings = "^2.2.1"
llama-index = "^0.10.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.poetry.scripts]
start = "app.main:start"